assignment4/src/main/mt22/parser/MT22Parser.py
# Generated from main/mt22/parser/MT22.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class MT22Parser ( Parser ):

    grammarFileName = "MT22.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'inherit'", "'out'", "'function'", "'void'", 
                     "'array'", "'['", "']'", "'of'", "'::'", "'if'", "'else'", 
                     "'while'", "'for'", "'do'", "'return'", "'break'", 
                     "'continue'", "'\"'", "'{'", "'}'", "'('", "')'", "','", 
                     "':'", "';'", "<INVALID>", "'auto'", "'%'", "'+'", 
                     "'='", "'*'", "'/'", "'-'", "'&&'", "'||'", "'!'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "DB", "LP", "RP", "LB", 
                      "RB", "COMMA", "COLON", "SEMI", "ATOMICTYPE", "TYPECONST", 
                      "REMAINOP", "ADDOP", "ASSIGNOP", "MULOP", "DIVOP", 
                      "SUBOP", "AND", "OR", "NEG", "EQ", "NE", "LT", "GT", 
                      "LE", "GE", "BOOLLIT", "INTLIT", "FLOATLIT", "IDENTIFY", 
                      "STRINGLIT", "CMT", "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_arraylit = 0
    RULE_arraylst = 1
    RULE_intlst = 2
    RULE_stringlst = 3
    RULE_idenlist = 4
    RULE_vardecl = 5
    RULE_helper = 6
    RULE_parameterdecl = 7
    RULE_paralist = 8
    RULE_paraprime = 9
    RULE_functiondecl = 10
    RULE_body = 11
    RULE_arrDecl = 12
    RULE_decl = 13
    RULE_exprlist = 14
    RULE_exprime = 15
    RULE_expr = 16
    RULE_expr2 = 17
    RULE_expr3 = 18
    RULE_expr4 = 19
    RULE_expr5 = 20
    RULE_expr6 = 21
    RULE_expr7 = 22
    RULE_expr8 = 23
    RULE_expr9 = 24
    RULE_callFunc = 25
    RULE_exprIndex = 26
    RULE_assignstmt = 27
    RULE_ifstmt = 28
    RULE_whilestmt = 29
    RULE_forstmt = 30
    RULE_dowhilestmt = 31
    RULE_returnstmt = 32
    RULE_funccallstmt = 33
    RULE_stmt = 34
    RULE_stmtlist = 35
    RULE_blockstmt = 36
    RULE_decllist = 37
    RULE_program = 38

    ruleNames =  [ "arraylit", "arraylst", "intlst", "stringlst", "idenlist", 
                   "vardecl", "helper", "parameterdecl", "paralist", "paraprime", 
                   "functiondecl", "body", "arrDecl", "decl", "exprlist", 
                   "exprime", "expr", "expr2", "expr3", "expr4", "expr5", 
                   "expr6", "expr7", "expr8", "expr9", "callFunc", "exprIndex", 
                   "assignstmt", "ifstmt", "whilestmt", "forstmt", "dowhilestmt", 
                   "returnstmt", "funccallstmt", "stmt", "stmtlist", "blockstmt", 
                   "decllist", "program" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    DB=18
    LP=19
    RP=20
    LB=21
    RB=22
    COMMA=23
    COLON=24
    SEMI=25
    ATOMICTYPE=26
    TYPECONST=27
    REMAINOP=28
    ADDOP=29
    ASSIGNOP=30
    MULOP=31
    DIVOP=32
    SUBOP=33
    AND=34
    OR=35
    NEG=36
    EQ=37
    NE=38
    LT=39
    GT=40
    LE=41
    GE=42
    BOOLLIT=43
    INTLIT=44
    FLOATLIT=45
    IDENTIFY=46
    STRINGLIT=47
    CMT=48
    WS=49
    UNCLOSE_STRING=50
    ILLEGAL_ESCAPE=51
    ERROR_CHAR=52

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ArraylitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(MT22Parser.LP, 0)

        def exprlist(self):
            return self.getTypedRuleContext(MT22Parser.ExprlistContext,0)


        def RP(self):
            return self.getToken(MT22Parser.RP, 0)

        def getRuleIndex(self):
            return MT22Parser.RULE_arraylit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylit" ):
                return visitor.visitArraylit(self)
            else:
                return visitor.visitChildren(self)




    def arraylit(self):

        localctx = MT22Parser.ArraylitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_arraylit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(MT22Parser.LP)
            self.state = 79
            self.exprlist()
            self.state = 80
            self.match(MT22Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArraylstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arraylit(self):
            return self.getTypedRuleContext(MT22Parser.ArraylitContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def arraylst(self):
            return self.getTypedRuleContext(MT22Parser.ArraylstContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_arraylst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArraylst" ):
                return visitor.visitArraylst(self)
            else:
                return visitor.visitChildren(self)




    def arraylst(self):

        localctx = MT22Parser.ArraylstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_arraylst)
        try:
            self.state = 87
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 82
                self.arraylit()
                self.state = 83
                self.match(MT22Parser.COMMA)
                self.state = 84
                self.arraylst()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 86
                self.arraylit()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IntlstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTLIT(self):
            return self.getToken(MT22Parser.INTLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def intlst(self):
            return self.getTypedRuleContext(MT22Parser.IntlstContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_intlst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntlst" ):
                return visitor.visitIntlst(self)
            else:
                return visitor.visitChildren(self)




    def intlst(self):

        localctx = MT22Parser.IntlstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_intlst)
        try:
            self.state = 93
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 89
                self.match(MT22Parser.INTLIT)
                self.state = 90
                self.match(MT22Parser.COMMA)
                self.state = 91
                self.intlst()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.match(MT22Parser.INTLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StringlstContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRINGLIT(self):
            return self.getToken(MT22Parser.STRINGLIT, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def stringlst(self):
            return self.getTypedRuleContext(MT22Parser.StringlstContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_stringlst

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStringlst" ):
                return visitor.visitStringlst(self)
            else:
                return visitor.visitChildren(self)




    def stringlst(self):

        localctx = MT22Parser.StringlstContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_stringlst)
        try:
            self.state = 99
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 95
                self.match(MT22Parser.STRINGLIT)
                self.state = 96
                self.match(MT22Parser.COMMA)
                self.state = 97
                self.stringlst()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 98
                self.match(MT22Parser.STRINGLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdenlistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFY(self):
            return self.getToken(MT22Parser.IDENTIFY, 0)

        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def idenlist(self):
            return self.getTypedRuleContext(MT22Parser.IdenlistContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_idenlist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIdenlist" ):
                return visitor.visitIdenlist(self)
            else:
                return visitor.visitChildren(self)




    def idenlist(self):

        localctx = MT22Parser.IdenlistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idenlist)
        try:
            self.state = 105
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 101
                self.match(MT22Parser.IDENTIFY)
                self.state = 102
                self.match(MT22Parser.COMMA)
                self.state = 103
                self.idenlist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.match(MT22Parser.IDENTIFY)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VardeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idenlist(self):
            return self.getTypedRuleContext(MT22Parser.IdenlistContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def TYPECONST(self):
            return self.getToken(MT22Parser.TYPECONST, 0)

        def ATOMICTYPE(self):
            return self.getToken(MT22Parser.ATOMICTYPE, 0)

        def arrDecl(self):
            return self.getTypedRuleContext(MT22Parser.ArrDeclContext,0)


        def helper(self):
            return self.getTypedRuleContext(MT22Parser.HelperContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_vardecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVardecl" ):
                return visitor.visitVardecl(self)
            else:
                return visitor.visitChildren(self)




    def vardecl(self):

        localctx = MT22Parser.VardeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vardecl)
        try:
            self.state = 115
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 107
                self.idenlist()
                self.state = 108
                self.match(MT22Parser.COLON)
                self.state = 112
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.TYPECONST]:
                    self.state = 109
                    self.match(MT22Parser.TYPECONST)
                    pass
                elif token in [MT22Parser.ATOMICTYPE]:
                    self.state = 110
                    self.match(MT22Parser.ATOMICTYPE)
                    pass
                elif token in [MT22Parser.T__4]:
                    self.state = 111
                    self.arrDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.helper()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class HelperContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFY(self):
            return self.getToken(MT22Parser.IDENTIFY, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.COMMA)
            else:
                return self.getToken(MT22Parser.COMMA, i)

        def helper(self):
            return self.getTypedRuleContext(MT22Parser.HelperContext,0)


        def expr(self):
            return self.getTypedRuleContext(MT22Parser.ExprContext,0)


        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def ASSIGNOP(self):
            return self.getToken(MT22Parser.ASSIGNOP, 0)

        def TYPECONST(self):
            return self.getToken(MT22Parser.TYPECONST, 0)

        def ATOMICTYPE(self):
            return self.getToken(MT22Parser.ATOMICTYPE, 0)

        def arrDecl(self):
            return self.getTypedRuleContext(MT22Parser.ArrDeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_helper

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitHelper" ):
                return visitor.visitHelper(self)
            else:
                return visitor.visitChildren(self)




    def helper(self):

        localctx = MT22Parser.HelperContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_helper)
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 117
                self.match(MT22Parser.IDENTIFY)
                self.state = 118
                self.match(MT22Parser.COMMA)
                self.state = 119
                self.helper()
                self.state = 120
                self.match(MT22Parser.COMMA)
                self.state = 121
                self.expr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(MT22Parser.IDENTIFY)
                self.state = 124
                self.match(MT22Parser.COLON)
                self.state = 128
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [MT22Parser.TYPECONST]:
                    self.state = 125
                    self.match(MT22Parser.TYPECONST)
                    pass
                elif token in [MT22Parser.ATOMICTYPE]:
                    self.state = 126
                    self.match(MT22Parser.ATOMICTYPE)
                    pass
                elif token in [MT22Parser.T__4]:
                    self.state = 127
                    self.arrDecl()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 130
                self.match(MT22Parser.ASSIGNOP)
                self.state = 131
                self.expr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFY(self):
            return self.getToken(MT22Parser.IDENTIFY, 0)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def TYPECONST(self):
            return self.getToken(MT22Parser.TYPECONST, 0)

        def ATOMICTYPE(self):
            return self.getToken(MT22Parser.ATOMICTYPE, 0)

        def arrDecl(self):
            return self.getTypedRuleContext(MT22Parser.ArrDeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_parameterdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterdecl" ):
                return visitor.visitParameterdecl(self)
            else:
                return visitor.visitChildren(self)




    def parameterdecl(self):

        localctx = MT22Parser.ParameterdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameterdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.T__0:
                self.state = 134
                self.match(MT22Parser.T__0)


            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.T__1:
                self.state = 137
                self.match(MT22Parser.T__1)


            self.state = 140
            self.match(MT22Parser.IDENTIFY)
            self.state = 141
            self.match(MT22Parser.COLON)
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.TYPECONST]:
                self.state = 142
                self.match(MT22Parser.TYPECONST)
                pass
            elif token in [MT22Parser.ATOMICTYPE]:
                self.state = 143
                self.match(MT22Parser.ATOMICTYPE)
                pass
            elif token in [MT22Parser.T__4]:
                self.state = 144
                self.arrDecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParalistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paraprime(self):
            return self.getTypedRuleContext(MT22Parser.ParaprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paralist

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParalist" ):
                return visitor.visitParalist(self)
            else:
                return visitor.visitChildren(self)




    def paralist(self):

        localctx = MT22Parser.ParalistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_paralist)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.T__0, MT22Parser.T__1, MT22Parser.IDENTIFY]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.paraprime()
                pass
            elif token in [MT22Parser.RB]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaprimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameterdecl(self):
            return self.getTypedRuleContext(MT22Parser.ParameterdeclContext,0)


        def COMMA(self):
            return self.getToken(MT22Parser.COMMA, 0)

        def paraprime(self):
            return self.getTypedRuleContext(MT22Parser.ParaprimeContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_paraprime

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParaprime" ):
                return visitor.visitParaprime(self)
            else:
                return visitor.visitChildren(self)




    def paraprime(self):

        localctx = MT22Parser.ParaprimeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_paraprime)
        try:
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.parameterdecl()
                self.state = 152
                self.match(MT22Parser.COMMA)
                self.state = 153
                self.paraprime()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 155
                self.parameterdecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctiondeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFY(self, i:int=None):
            if i is None:
                return self.getTokens(MT22Parser.IDENTIFY)
            else:
                return self.getToken(MT22Parser.IDENTIFY, i)

        def COLON(self):
            return self.getToken(MT22Parser.COLON, 0)

        def LB(self):
            return self.getToken(MT22Parser.LB, 0)

        def paralist(self):
            return self.getTypedRuleContext(MT22Parser.ParalistContext,0)


        def RB(self):
            return self.getToken(MT22Parser.RB, 0)

        def body(self):
            return self.getTypedRuleContext(MT22Parser.BodyContext,0)


        def TYPECONST(self):
            return self.getToken(MT22Parser.TYPECONST, 0)

        def ATOMICTYPE(self):
            return self.getToken(MT22Parser.ATOMICTYPE, 0)

        def arrDecl(self):
            return self.getTypedRuleContext(MT22Parser.ArrDeclContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_functiondecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctiondecl" ):
                return visitor.visitFunctiondecl(self)
            else:
                return visitor.visitChildren(self)




    def functiondecl(self):

        localctx = MT22Parser.FunctiondeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_functiondecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(MT22Parser.IDENTIFY)
            self.state = 159
            self.match(MT22Parser.COLON)
            self.state = 160
            self.match(MT22Parser.T__2)
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [MT22Parser.TYPECONST]:
                self.state = 161
                self.match(MT22Parser.TYPECONST)
                pass
            elif token in [MT22Parser.ATOMICTYPE]:
                self.state = 162
                self.match(MT22Parser.ATOMICTYPE)
                pass
            elif token in [MT22Parser.T__4]:
                self.state = 163
                self.arrDecl()
                pass
            elif token in [MT22Parser.T__3]:
                self.state = 164
                self.match(MT22Parser.T__3)
                pass
            else:
                raise NoViableAltException(self)

            self.state = 167
            self.match(MT22Parser.LB)
            self.state = 168
            self.paralist()
            self.state = 169
            self.match(MT22Parser.RB)
            self.state = 172
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MT22Parser.T__0:
                self.state = 170
                self.match(MT22Parser.T__0)
                self.state = 171
                self.match(MT22Parser.IDENTIFY)


            self.state = 174
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def blockstmt(self):
            return self.getTypedRuleContext(MT22Parser.BlockstmtContext,0)


        def getRuleIndex(self):
            return MT22Parser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = MT22Parser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 176
            self.blockstmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArrDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def intlst(self):
            return self.getTypedRuleContext(MT22Parser.IntlstContext,0)


        def ATOMICTYPE(self):
            return self.getToken(MT22Parser.ATOMICTYPE, 0)
